[package]
name = "solana_cli_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
colored = "2.0.4"
solana-client = "1.16.14"
solana-program = "1.16.14"
solana-sdk = "1.16.14"
spinoff = "0.8.0"
